<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 JustWayward Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">任阅</string>

    <string name="add_tag">Add Tag</string>

    <!--搜索相关-->
    <string name="search_hot_search">大家都在搜</string>
    <string name="search_change_a_lot">换一批</string>
    <string name="search_result_lately_follower">"%1$d人在追 |&#160;"</string>
    <string name="search_result_retention_ratio">"%1$s%%读者留存 |&#160;"</string>
    <string name="search_result_author">%1$s著</string>

    <!--书籍详情相关-->
    <string name="book_detail">书籍详情</string>
    <string name="book_detail_author">%1$s</string>
    <string name="book_detail_category"> &#160;|&#160;%1$s |&#160;</string>
    <string name="book_detail_user_lv">&#160;lv.%1$d</string>
    <string name="book_detail_remove_collection">不追了</string>
    <string name="book_detail_join_collection">追更新</string>
    <string name="book_detail_retention_ratio">%1$s%%</string>
    <string name="book_detail_hot_reviews">热门书评</string>
    <string name="book_detail_community">%1$s的社区</string>
    <string name="book_detail_post_count">共有%1$d个帖子</string>
    <string name="book_detail_recommend_book_list">推荐书单</string>
    <string name="book_detail_recommend_book_list_book_count">共%1$d本书 |&#160;</string>
    <string name="book_detail_recommend_book_list_collector_count">%1$d人收藏</string>
    <string name="book_detail_is_joined_the_book_shelf">是否将《%1$s》加入书架</string>
    <string name="book_detail_has_joined_the_book_shelf">《%1$s》成功加入书架</string>
    <string name="book_detail_has_remove_the_book_shelf">已移除《%1$s》</string>

    <!--阅读页面相关-->
    <string name="book_read_reading">朗读</string>
    <string name="book_read_community">社区</string>
    <string name="book_read_change_source">换源</string>
    <string name="book_read_introduce">简介</string>
    <string name="book_read_mode_day">夜间</string>
    <string name="book_read_mode_day_manual_setting">日间</string>
    <string name="book_read_mode_night_manual_setting">夜间</string>
    <string name="book_read_feedback">反馈</string>
    <string name="book_read_settings">设置</string>
    <string name="book_read_download">缓存</string>
    <string name="book_read_mark">书签</string>
    <string name="book_read_toc">目录</string>
    <string name="add_bookmark">新增书签</string>
    <string name="manage_bookmark">管理</string>
    <string name="clear_bookmark">清除</string>
    <string name="book_read_download_error">网络异常，已取消下载</string>
    <string name="book_read_download_complete">缓存完成，失败%1$d章</string>
    <string name="book_read_alreday_download">已缓存过:%1$s(%2$d/%3$d)...</string>
    <string name="book_read_download_progress">正在缓存:%1$s(%2$d/%3$d)...</string>
    <string name="net_error">网络异常</string>
    <string name="book_read_add_book">添书</string>
    <string name="book_read_would_you_like_to_add_this_to_the_book_shelf">是否将本书加入书架？</string>
    <string name="book_read_join_the_book_shelf">加入书架</string>
    <string name="book_read_not">不了</string>

    <!--分类相关-->
    <string name="category">分类</string>
    <string name="male">男生</string>
    <string name="female">女生</string>
    <string name="category_book_count">%1$d本</string>

    <string name="category_book_msg">%1$d人在追 |&#160; %2$s%%读者留存</string>
    <string name="subject_book_msg">共%1$d本书 |&#160; %2$d人收藏</string>

    <!--主题书单相关-->
    <string name="subject_book_list">主题书单</string>
    <string name="subject_book_list_my_book_list">我的书单</string>
    <string name="subject_book_list_detail">书单详情</string>
    <string name="subject_book_list_detail_book_lately_follower">%1$d&#160;人在追</string>
    <string name="subject_book_list_detail_book_word_count">|&#160;%1$d&#160;万字</string>

    <!--评论相关-->
    <string name="comment_floor">%1$d楼&#160;</string>
    <string name="comment_like_count">❤%1$d次同感</string>
    <string name="comment_best_comment">仰望神评论</string>
    <string name="comment_comment_count">共%1$d条评论</string>
    <string name="comment_reply_floor">(%1$d楼)</string>
    <string name="comment_reply_nickname">回复 %1$s</string>

    <!--书评区相关-->
    <string name="book_review_book_type">[%1$s]</string>
    <string name="book_review_helpful_yes">%1$d 人推荐</string>
    <string name="book_review_detail_helpful_yes">有用</string>
    <string name="book_review_detail_helpful_no">无用</string>
    <string name="book_review_detail_to_review_the_scoring">给书评打分</string>
    <string name="book_review_detail_score">楼主打分：</string>

    <!--主页菜单-->
    <string name="menu_main_please_login">请登录</string>
    <string name="menu_main_my_message">我的消息</string>
    <string name="menu_main_sync_bookshelf">同步书架</string>
    <string name="menu_main_wifi_book">WIFI传书</string>
    <string name="menu_main_feedback">意见反馈</string>
    <string name="menu_main_night_mode">夜间模式</string>
    <string name="menu_main_settings">设置</string>
    <string name="menu_main_scan_local_book">扫描本地书籍</string>

    <!--主页追书-->
    <string name="exit_tips">再按一次退出程序</string>
    <string name="remove_selected_book">移除所选书籍</string>
    <string name="delete_local_cache">同时删除本地缓存</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="cancel_selected_all">取消全选</string>
    <string name="selected_all">全选</string>
    <string name="has_not_selected_delete_book">你没有选择要删的书哦</string>
    <string name="add_the_book_you_like">添加你喜欢的小说</string>
    <string name="network_error_tips">加载失败，请检查网络或稍后再试</string>
    <string name="cancle_top">取消置顶</string>
    <string name="to_add">去添加</string>
    <string name="sha1">82:BC:D2:9C:88:0B:8E:1F:0F:1F:EE:57:E1:0B:50:77:09:37:03:E9</string>
    <string name="md5">4F:45:E9:20:FF:5D:1A:0E:29:D9:97:98:6C:D9:71:81</string>
    <string name="sha256">20:49:74:D4:15:38:2E:65:41:34:CE:10:C6:FC:03:5A:E0:ED:55:7D:34:4F:98:50:0A:4F:AA:0F:CC:EC:FB:A9</string>

</resources>
