<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 JustWayward Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="80"
        android:title="action_search"
        app:showAsAction="ifRoom"/>
    <!--app:showAsAction="ifRoom"如果还有空间的话，就显示在外面-->
    

    <item
        android:id="@+id/action_login"
        android:icon="@drawable/home_menu_0"
        android:title="@string/menu_main_please_login"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_my_message"
        android:icon="@drawable/home_menu_1"
        android:title="@string/menu_main_my_message"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sync_bookshelf"
        android:icon="@drawable/home_menu_2"
        android:title="@string/menu_main_sync_bookshelf"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_scan_local_book"
        android:icon="@drawable/home_menu_3"
        android:title="@string/menu_main_scan_local_book"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_wifi_book"
        android:icon="@drawable/home_menu_4"
        android:title="@string/menu_main_wifi_book"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/home_menu_5"
        android:title="@string/menu_main_feedback"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_night_mode"
        android:icon="@drawable/theme_night"
        android:title="@string/menu_main_night_mode"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/home_menu_6"
        android:title="@string/menu_main_settings"
        app:showAsAction="never"/>
</menu>