<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlBookReadRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_leather_bg"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flReadWidget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layerType="hardware"
        android:clickable="false"
        android:focusable="false" />

    <LinearLayout
        android:id="@+id/llBookReadTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/reader_menu_bg_color"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:src="@drawable/ab_back" />

        <TextView
            android:id="@+id/tvBookReadTocTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone"
            tools:text="武侠世界自由行" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/tvBookReadReading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/book_read_reading"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvBookReadCommunity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/book_read_community"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvBookReadChangeSource"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/book_read_change_source"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/ivBookReadMore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDownloadProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBookReadBottom"
        android:background="#89232323"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:text="@string/book_read_download_progress"
        android:textColor="@color/white"
        android:visibility="gone" />

    <include layout="@layout/layout_read_aa_set" />

    <LinearLayout
        android:id="@+id/llBookReadBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/reader_menu_bg_color"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvBookReadMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_menu_mode_night_normal"
            android:gravity="center"
            android:text="@string/book_read_mode_day"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvBookReadFeedBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_menu_read_report"
            android:gravity="center"
            android:text="@string/book_read_feedback"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvBookReadSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_menu_settings_normal"
            android:gravity="center"
            android:text="@string/book_read_settings"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvBookReadDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_reader_ab_download"
            android:gravity="center"
            android:text="@string/book_read_download"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvBookReadToc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_menu_toc_normal"
            android:gravity="center"
            android:text="@string/book_read_toc"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>